@@ -1,5 +1,11 @@
 2012-08-16	The InnoDB Team
 
+	* btr/btr0btr.c, btr/btr0cur.c:
+	Fix Bug#12845774 OPTIMISTIC INSERT/UPDATE USES WRONG HEURISTICS FOR
+	COMPRESSED PAGE SIZE
+
+2012-08-16	The InnoDB Team
+
 	* btr/btr0cur.c, page/page0page.c:
 	Fix Bug#13523839 ASSERTION FAILURES ON COMPRESSED INNODB TABLES
 
